--- a/src/app/features/workspace/components/add-users-to-channel/add-users-to-channel.scss
+++ b/src/app/features/workspace/components/add-users-to-channel/add-users-to-channel.scss
@@ -17,6 +17,10 @@
   margin-bottom: 24px;
 }
 
+.dialog-content-wrapper {
+  width: 100%;
+}
+
 .dialog-content {
   padding-left: 0;
   margin-bottom: 16px;
@@ -26,6 +30,11 @@
 .dialog-actions {
   padding: 0;
   margin-top: auto;
+}
+
+.form-field {
+  width: 100%;
+  margin-top: 8px;
 }
 
 // --- Text and Element Styling ---
